--- a/mts/src/main/tutorial/importsipp/Templates/recv_template.xml
+++ b/mts/src/main/tutorial/importsipp/Templates/recv_template.xml
@@ -4,7 +4,7 @@
 <parameter name="[_result]" operation="setFromMessage" value="message.result"/>
 <parameter name="[_request]" operation="setFromMessage" value="message.type"/>
 <or>
-<test parameter="[_result]" condition="number.equal" value="xpath:./@result"/>
+<test parameter="[_result]" condition="number.equal" value="xpath:./@response"/>
 <test parameter="[_request]" condition="string.equal" value="xpath:./@request"/>
 </or>
 <parameter name="[last_Message]" operation="setFromMessage" value="Message" />
