--- a/trunk/mts/src/main/tutorial/importsipp/Templates/if_recv_template.xml
+++ b/trunk/mts/src/main/tutorial/importsipp/Templates/if_recv_template.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="ISO-8859-2" ?>
 <template>
-<if response="403">
+<if response="xpath:./@response">
 <goto label="xpath:./@next" />
 </if>
 </template>
