--- a/trunk/mts/src/main/tutorial/importsipp/Templates/recv_template.xml
+++ b/trunk/mts/src/main/tutorial/importsipp/Templates/recv_template.xml
@@ -9,5 +9,5 @@
 </or>
 <parameter name="[last_Message]" operation="setFromMessage" value="Message" />
 </receiveMessageSIP>
-<goto label="xpath:./@next" />
+<goto label="xpath:.[not(@optional)]/@next"/>
 </template>
