--- a/trunk/mts/src/main/tutorial/importsipp/Templates/global_template.xml
+++ b/trunk/mts/src/main/tutorial/importsipp/Templates/global_template.xml
@@ -6,6 +6,7 @@
 <parameter name="[cseq]" operation="set" value="1" />
 <parameter name="[field0]" operation="file.readcsv" value="nomfichier.csv" value2="0"/>
 <parameter name="[local_port]" operation="file.readProperty" value="sip.properties" value2="listenpoint.LOCAL_PORT" />
+<parameter name="[remote_host]" operation="set" value="127.0.0.1" />
 <parameter name="[remote_port]" operation="file.readProperty" value="sip.properties" value2="listenpoint.LOCAL_PORT" />
 <parameter name="[pid]" operation="number.random" value="10000000"/>
 <parameter name="[media_ip_type]" operation="set" value="4"/>
