--- a/mts/src/main/tutorial/importsipp/Templates/recv_template.xml
+++ b/mts/src/main/tutorial/importsipp/Templates/recv_template.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="ISO-8859-2" ?>
 <template>
 <receiveMessageSIP>
-<parameter name="[_result]" operation="setFromMessage" value="message.result"/>
+<parameter name="[_response]" operation="setFromMessage" value="message.result"/>
 <parameter name="[_request]" operation="setFromMessage" value="message.type"/>
 <or>
-<test parameter="[_result]" condition="number.equal" value="xpath:./@response"/>
-<test parameter="[_request]" condition="string.equal" value="xpath:./@request"/>
+<test parameter="[_response]" condition="number.equals" value="xpath:./@response"/>
+<test parameter="[_request]" condition="string.equals" value="xpath:./@request"/>
 </or>
 <parameter name="[last_Message]" operation="setFromMessage" value="Message" />
 </receiveMessageSIP>
