--- a/trunk/mts/src/main/tutorial/importsipp/Templates/send_template.xml
+++ b/trunk/mts/src/main/tutorial/importsipp/Templates/send_template.xml
@@ -11,7 +11,7 @@
 <parameter name="[routes]" operation="setFromMessage" value="header.RecordRoute" />
 <parameter name="[peer_tag_param]" operation="setFromMessage" value="header.To.parameter.tag"/>
 <parameter name="[peer_tag_param]" operation="set" value=";tag=[peer_tag_param]"/>
-<sendMessageSIP>
+<sendMessageSIP remoteHost="[remote_host]" remotePort="[remote_port]">
 </sendMessageSIP>
 <goto label="xpath:./@next" />
 </template>
