--- a/mts/src/main/conf/importsipp/Templates/test_template.xml
+++ b/mts/src/main/conf/importsipp/Templates/test_template.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="ISO-8859-2" ?>
 <template>
+
 <parameter editable="true" name="[service]" operation="set" value="service"/>
-<parameter editable="true" name="[remote_ip]" operation="set" value="172.16.21.109"/>
-<parameter editable="true" name="[transport]" operation="set" value="UDP"/>
-<parameter editable="true" name="[media_port]" operation="set" value="7070"/>
+
+<parameter name="[local_ip]" operation="system.ipaddress"/>
+<parameter name="[local_ip]" operation="set" value="[local_ip(0)]" />
+<parameter name="[local_port]" operation="file.readProperty" value="sip.properties" value2="listenpoint.LOCAL_PORT" />
+
+<parameter name="[remote_ip]" operation="system.ipaddress" />
+<parameter name="[remote_ip]" operation="set" value="[remote_ip(0)]" />
+<parameter name="[remote_port]" operation="file.readProperty" value="sip.properties" value2="listenpoint.LOCAL_PORT" />
+
 <parameter name="[media_ip]" operation="system.ipaddress" value="eth0"/>
-<parameter name="[local_ip]" operation="system.ipaddress" value="eth0"/>
+<parameter editable="true" name="[media_port]" operation="set" value="7070"/>
+
+<parameter editable="true" name="[transport]" operation="set" value="UDP"/>
+
 </template>
