--- a/trunk/mts/src/main/conf/importsipp/Templates/recv_template.xml
+++ b/trunk/mts/src/main/conf/importsipp/Templates/recv_template.xml
@@ -4,10 +4,10 @@
 <parameter name="[_response]" operation="setFromMessage" value="message.result"/>
 <parameter name="[_request]" operation="setFromMessage" value="message.type"/>
 <or>
-<test parameter="[_response]" condition="number.equals" value="xpath:./@response"/>
-<test parameter="[_request]" condition="string.equals" value="xpath:./@request"/>
+<test parameter="[_response]" condition="number.equals" value="{xpath:./@response}"/>
+<test parameter="[_request]" condition="string.equals" value="{xpath:./@request}"/>
 </or>
 <parameter name="[last_Message]" operation="setFromMessage" value="Message" />
 </receiveMessageSIP>
-<goto label="xpath:.[not(@optional)]/@next"/>
+<goto label="{xpath:.[not(@optional)]/@next}"/>
 </template>
