--- a/trunk/mts/src/main/conf/importsipp/Templates/send_template.xml
+++ b/trunk/mts/src/main/conf/importsipp/Templates/send_template.xml
@@ -12,7 +12,7 @@
 <parameter name="[peer_tag_param]" operation="setFromMessage" value="header.To.parameter.tag"/>
 <parameter name="[peer_tag_param]" operation="set" value=";tag=[peer_tag_param]"/>
 <sendMessageSIP remoteHost="[remote_ip]" remotePort="[remote_port]">
-xpath:./text()
+{xpath:./text()}
 </sendMessageSIP>
-<goto label="xpath:./@next" />
+<goto label="{xpath:./@next}" />
 </template>
