--- a/mts/src/main/conf/importsipp/Templates/if_recv_template.xml
+++ b/mts/src/main/conf/importsipp/Templates/if_recv_template.xml
@@ -2,10 +2,10 @@
 <template>
 <if> 
 <condition>
-	<test parameter="[_response]" condition="number.equals" value="xpath:.[@optional = 'true']/@response"/>
+	<test parameter="[_response]" condition="number.equals" value="{xpath:.[@optional = 'true']/@response}"/>
 </condition>
 <then>
-	<goto label="xpath:./@next" />
+	<goto label="{xpath:./@next}" />
 </then>
 </if>
 </template>
