--- a/mts/src/main/conf/importsipp/Templates/sendCmd_template.xml
+++ b/mts/src/main/conf/importsipp/Templates/sendCmd_template.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="ISO-8859-2" ?>
 <template>
 <sendMessageSIP remoteHost="[remote_ip]" remotePort="[remote_port]">
-xpath:./text()
+{xpath:./text()}
 </sendMessageSIP>
 </template>
