--- a/mts/src/main/conf/importsipp/Templates/recvCmd_template.xml
+++ b/mts/src/main/conf/importsipp/Templates/recvCmd_template.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="ISO-8859-2" ?>
 <template>
 <receiveMessageSIP>
-xpath:./text()
+{xpath:./text()}
 </receiveMessageSIP>
 </template>
