--- a/mts/src/main/conf/importsipp/Templates/sendCmd_template.xml
+++ b/mts/src/main/conf/importsipp/Templates/sendCmd_template.xml
@@ -2,5 +2,5 @@
 <template>
 <sendMessageSIP remoteHost="[remote_ip]" remotePort="[remote_port]">
 {xpath:./text()}
-</sendMessageSIP>
+</sendMessageSIP> il faut creer un parametre: system.semaphoreNotify (send) et system.semaphoreWait (receive), + variable de niveau test
 </template>
