--- a/trunk/mts/src/main/conf/importsipp/Templates/testSuite_template.xml
+++ b/trunk/mts/src/main/conf/importsipp/Templates/testSuite_template.xml
@@ -19,5 +19,7 @@
 <parameter name="[auto_media_port]" operation="set" value="20000" editable="true"/>
 
 <parameter name="[transport]" operation="set" value="UDP" editable="true"/>
+<parameter name="[_pauseDuration]" operation="set" value="1000" editable="true"/>
 
+<parameter name="[_fileName]" operation="set" value="nomfichier.csv" editable="true"/>
 </template>
