--- a/trunk/mts/src/main/conf/importsipp/Templates/recvCmd.xml
+++ b/trunk/mts/src/main/conf/importsipp/Templates/recvCmd.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="ISO-8859-2" ?>
 <template>
+<parameter name="[_recv_cmd]" operation="system.semaphoreWait"/>
 <receiveMessageSIP>
 {xpath:./text()}
 </receiveMessageSIP>
