--- a/mts/src/main/conf/importsipp/Templates/sendCmd.xml
+++ b/mts/src/main/conf/importsipp/Templates/sendCmd.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="ISO-8859-2" ?>
 <template>
+<parameter name="[_sendCmd]" operation="system.semaphoreNotify"/>
 <sendMessageSIP remoteHost="[remote_ip]" remotePort="[remote_port]">
 {xpath:./text()}
-</sendMessageSIP> il faut creer un parametre: system.semaphoreNotify (send) et system.semaphoreWait (receive), + variable de niveau test
+</sendMessageSIP>
 </template>
