--- a/trunk/mts/src/main/conf/importsipp/Templates/send.xml
+++ b/trunk/mts/src/main/conf/importsipp/Templates/send.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="ISO-8859-2" ?>
 <template>
+<parameter name="[last_*]" xpath="{xpath:./text()}" />
 <parameter name="[branch]" operation="string.random" value="10"/>
-<parameter name="[last_Via:]" operation="setFromMessage" value="header.Via.Namevalue" value2="[last_Message]"/>
-<parameter name="[last_From:]" operation="setFromMessage" value="header.From.Namevalue" value2="[last_Message]"/>
-<parameter name="[last_To:]" operation="setFromMessage" value="header.To.Namevalue" value2="[last_Message]"/>
-<parameter name="[last_Call-ID:]" operation="setFromMessage" value="header.Call-ID.Namevalue" value2="[last_Message]"/>
-<parameter name="[last_CSeq:]" operation="setFromMessage" value="header.CSeq.Namevalue" value2="[last_Message]"/>
 <parameter name="[cseq]" operation="setFromMessage" value="header.CseqNumber" value2="[last_Message]"/>
 <parameter name="[next_url]" operation="setFromMessage" value="header.Contact.address.Uri" value2="[last_Message]"/>
 <parameter name="[routes]" operation="setFromMessage" value="header.RecordRoute" value2="[last_Message]"/>
