--- a/mts/src/main/conf/importsipp/Templates/test.xml
+++ b/mts/src/main/conf/importsipp/Templates/test.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="ISO-8859-2" ?>
 <template>
-<test parameter="./@nomparameter" condition="string.equals" value="./@value" />
+<test parameter="./@variable" condition="string.equals" value="./@value" />
 </template>
