--- a/mts/src/main/conf/importsipp/Templates/recvCmd.xml
+++ b/mts/src/main/conf/importsipp/Templates/recvCmd.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="ISO-8859-2" ?>
 <template>
-<parameter name="[_recv_cmd]" operation="system.semaphoreWait"/>
+<parameter name="[_recvCmd]" operation="system.semaphoreWait"/>
 <receiveMessageSIP>
 </receiveMessageSIP>
 </template>
