--- a/mts/src/main/conf/importsipp/Templates/sendCmd.xml
+++ b/mts/src/main/conf/importsipp/Templates/sendCmd.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="ISO-8859-2" ?>
 <template>
-<parameter name="[_sendCmd]" operation="system.semaphoreNotify"/>
-<sendMessageSIP remoteHost="[remote_ip]" remotePort="[remote_port]">
+<parameter name="[test:_sendCmdParameter]" operation="set">
 {xpath:./text()}
-</sendMessageSIP>
+</parameter>
+<parameter name="[_sendCmd]" operation="system.semaphoreNotify"/>
 </template>
