--- a/trunk/mts/src/main/conf/importsipp/Templates/ereg.xml
+++ b/trunk/mts/src/main/conf/importsipp/Templates/ereg.xml
@@ -5,8 +5,8 @@
 <parameter name="[search_in]" operation="setFromMessage" value="header.{xpath:./@header}" state="{xpath:.[@search_in = 'hdr' and @start_line != 'true']/@search_in}"/>
 <parameter name="[search_in]" operation="setFromMessage" value="firstline" state="{xpath:.[@search_in = 'hdr' and @start_line = 'true']/@search_in}" />
 <parameter name="[search_in]" operation="setFromMessage" value="content" state="{xpath:.[@search_in = 'body']/@search_in}" />
-<parameter name="{xpath:./@assign_to}" operation="string.matches" value="[search_in]" value2="{xpath:./@regexp}" />
-<parameter name="[result]" operation="set" value="{xpath:./@assign_to}" />
+<parameter name="[{xpath:./@assign_to}]" operation="string.matches" value="[search_in]" value2="{xpath:./@regexp}" />
+<parameter name="[result]" operation="set" value="[{xpath:./@assign_to}]" />
 <test parameter="[result]" condition="list.isempty" state="{xpath:.[@check_it = 'true']/@check_it}" />
 <test parameter="[result]" condition="list.isempty" not="true" state="{xpath:.[@check_it_inverse = 'true']/@check_it_inverse}"/>
 </template>
