--- a/trunk/mts/src/main/conf/importsipp/Templates/send.xml
+++ b/trunk/mts/src/main/conf/importsipp/Templates/send.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="ISO-8859-2" ?>
 <template>
-<parameter name="[last_*]" xpath="{xpath:./text()}" />
+<parameter name="[{regex:(last_[^:]+\b)}]" operation="setFromMessage" value="header.{regex:last_([^:]*)}.Namevalue" value2="[last_Message]" />
 <parameter name="[branch]" operation="string.random" value="10"/>
 <parameter name="[cseq]" operation="setFromMessage" value="header.CseqNumber" value2="[last_Message]"/>
 <parameter name="[next_url]" operation="setFromMessage" value="header.Contact.address.Uri" value2="[last_Message]"/>
 <parameter name="[routes]" operation="setFromMessage" value="header.RecordRoute" value2="[last_Message]"/>
 <parameter name="[peer_tag_param]" operation="setFromMessage" value="header.To.parameter.tag" value2="[last_Message]"/>
 <parameter name="[peer_tag_param]" operation="set" value=";tag=[peer_tag_param]"/>
-<sendMessageSIP remoteHost="[remote_ip]" remotePort="[remote_port]">
+<sendMessageSIP listenpoint="_listenpoint" remoteHost="[remote_ip]" remotePort="[remote_port]">
 {xpath:./text()}
 </sendMessageSIP>
 <if state="{xpath:./@next}"> 
@@ -19,3 +19,4 @@
 </then>
 </if>
 </template>
+
