--- a/mts/src/main/conf/importsipp/Templates/scenario.xml
+++ b/mts/src/main/conf/importsipp/Templates/scenario.xml
@@ -21,7 +21,7 @@
 	<parameter name="[testcase:{regex:(\b(\w*?field\d))\]}_size]" operation="list.size" value="[testcase:{regex:\b(\w*?field\d)\]}_mts]" />
 </else>
 </if>
-<createListenpointSip name="_listenpoint" localHost="[local_ip]" localPort="[local_port]"/>
+<!-- <createListenpointSIP name="_listenpoint" localHost="[local_ip]" localPort="[local_port]"/> -->
 <parameter name="[call_id]" operation="number.random" value="10000000" />
 <parameter name="[cseq]" operation="set" value="1" />
 <parameter name="[pid]" operation="number.random" value="10000000"/>
