--- a/mts/src/main/conf/importsipp/Templates/testSuite.xml
+++ b/mts/src/main/conf/importsipp/Templates/testSuite.xml
@@ -5,13 +5,13 @@
 
 <parameter name="[local_ip]" operation="system.ipaddress"/>
 <parameter name="[local_ip]" operation="set" value="[local_ip(0)]" editable="true"/>
-<parameter name="[local_port]" operation="file.readProperty" value="sip.properties" value2="listenpoint.LOCAL_PORT"/>
-<parameter name="[local_port]" operation="set" value="[local_port]" editable="true"/>
+<parameter name="[localPort]" operation="set" value="6060,7060,8060,9060,10060" />
+<parameter name="[localPort]" operation="string.split" value="[localPort]" value2="," />
 
 <parameter name="[remote_ip]" operation="system.ipaddress"/>
 <parameter name="[remote_ip]" operation="set" value="[remote_ip(0)]"  editable="true"/>
-<parameter name="[remote_port]" operation="file.readProperty" value="sip.properties" value2="listenpoint.LOCAL_PORT"/>
-<parameter name="[remote_port]" operation="set" value="[remote_port]" editable="true"/>
+<parameter name="[remotePort]" operation="set" value="7060,8060,9060,10060,6060" />
+<parameter name="[remotePort]" operation="string.split" value="[remotePort]" value2="," />
 
 <parameter name="[media_ip]" operation="system.ipaddress"/>
 <parameter name="[media_ip]" operation="set" value="[media_ip(0)]" editable="true"/>
