--- a/mts/src/main/conf/importsipp/Templates/recv.xml
+++ b/mts/src/main/conf/importsipp/Templates/recv.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="ISO-8859-2" ?>
 <template>
-<receiveMessageSIP listenpoint="_listenpoint[local_port]">
+<receiveMessageSIP listenpoint="_listenpoint[local_port]" timeout="[recv_timeout]">
 <parameter name="[_response]" operation="setFromMessage" value="message.result"/>
 <parameter name="[_request]" operation="setFromMessage" value="message.type"/>
 <or>
